<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Статус"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Self Site Blocker"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchEnableBlocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/switch_enable_blocking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <Button
        android:id="@+id/buttonOpenAccessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/button_open_accessibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchEnableBlocking" />

    <ImageView
        android:id="@+id/ivMascotMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sister_main"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonOpenAccessibility"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-109dp" />

    <ImageView
        android:id="@+id/ivMascotAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sister_main_settings"
        android:contentDescription="@null"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/ivMascotMain"
        app:layout_constraintStart_toStartOf="@id/ivMascotMain"
        app:layout_constraintTop_toTopOf="@id/ivMascotMain" />

</androidx.constraintlayout.widget.ConstraintLayout>
